<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:measureAllChildren="false"
    android:stackFromBottom="true"
    android:transcriptMode="alwaysScroll" >


    <LinearLayout
        android:id="@+id/header"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:paddingBottom="5dip"
        android:paddingTop="5dip" >

        <EditText
            android:id="@+id/registerFirstName"
            android:layout_width="fill_parent"
            android:hint="@string/RegDocNameText"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="20dip"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/registerLastName"
            android:layout_width="fill_parent"
            android:hint="@string/RegDocLocText"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="20dip"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/registerUserName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/RegUserNameText"
            android:layout_marginTop="5dip"
            android:singleLine="true"
            android:inputType="text"
            android:layout_marginBottom="20dp" />
        <!--  Email Label -->
        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/RegDocEmailText"
            android:layout_marginTop="5dip"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="20dp" />
        <!-- Password field -->
        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/RegDocPassText"
            android:layout_marginTop="5dip"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_marginBottom="20dp" />
        <!-- Location field -->
        <!-- Register button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/DocReg"/>
    </LinearLayout>
</ScrollView>