<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:measureAllChildren="false"
    android:stackFromBottom="true"
    android:transcriptMode="alwaysScroll"
    android:fillViewport="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.finalproject.yourdoctor.FixAppointment">

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:hint="@string/BFixName"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dip" />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:hint="@string/Bemail"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/reason"
        android:layout_width="fill_parent"
        android:hint="@string/BFixReason"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_below="@+id/email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <EditText
        android:id="@+id/age"
        android:layout_width="fill_parent"
        android:hint="@string/Bage"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="number"
        android:layout_below="@+id/reason"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/button"
        android:layout_below="@+id/age"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/age"
        android:layout_alignEnd="@+id/age"
        android:layout_marginTop="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/fillForm"
            android:gravity="center"
            android:textColor="#FF4848"
            android:id="@+id/textView4"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</ScrollView>
